--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ model_data/
 img_test*/
 cat_and_dog*/
 
+#pycharm
+.idea/
+
 # Byte-compiled / optimized / DLL files
 **/__pycache__/
 __pycache__/
